Quiet 'Illegal reflective access by com.google.protobuf.UnsafeUtil' warnings
see: https://github.com/google/protobuf/issues/3781
PiperOrigin-RevId: 208535953